# RustyChat

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  todo.txt
src/core/: context.rs  encryption.rs  mod.rs  sender.rs
src/gate/: RustGate.d
src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
src/server/: client.rs  history.rs  mod.rs  protocols.rs  response.rs  users.rs
src/utils/: mod.rs
